--- a/css_practica/style1.css
+++ b/css_practica/style1.css
@@ -2,16 +2,17 @@
     float: left;
     margin-top: 100px;
     margin-left: 200px;
-    width: 600px;
+    width: 200px;
     border: 3px solid #73AD21;
     
 }
 
 #parrafo{
-    margin-left: 200px;
+    
     float: left;
     border: 3px solid #73AD21;
     width: 200px;
+    margin-top: 200px;
     
     
 
